Category for moons, Mars moon pages, expanded Sun page, (exo)planet pages

--- a/pages/ariel.html
+++ b/pages/ariel.html
@@ -95,3 +95,6 @@ link: ariel
                         <a href="https://en.wikipedia.org/wiki/Ariel_(moon)">https://en.wikipedia.org/wiki/Ariel_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
