--- a/pages/callisto.html
+++ b/pages/callisto.html
@@ -117,3 +117,6 @@ link: callisto
                         <a href="https://en.wikipedia.org/wiki/Callisto_(moon)">https://en.wikipedia.org/wiki/Callisto_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
