--- a/pages/charon.html
+++ b/pages/charon.html
@@ -144,3 +144,6 @@ link: charon
                         <a href="https://en.wikipedia.org/wiki/Charon_(moon)">https://en.wikipedia.org/wiki/Charon_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
