--- a/pages/comet.html
+++ b/pages/comet.html
@@ -43,7 +43,7 @@ link: comet
                         In the 16th century, Tycho Brahe was the first to prove using parallax measurements that comets were not atmospheric events, but distant celestial objects.
                         Issaac Newton suggested that comets were astronomical bodies, and as such they would follow an orbit in the shape of a conic section.
                         He identified that those of 1531, 1607, and 1682 were the same and that it would return somewhere in 1758-59.
-                        Though he did not live to see it, the comet was named Halley’s Comet, making it the first recognized as periodic.
+                        Though he did not live to see it, the comet was named <a href="halley.html">Halley’s Comet</a>, making it the first recognized as periodic.
                     </p>
                     <p class="paragraph">
                         Throughout the 18th and 19th centuries, improvements in telescope technology and orbital mechanics allowed astronomers to discover and track an increasing number of comets.
