--- a/pages/dione.html
+++ b/pages/dione.html
@@ -99,3 +99,6 @@ link: dione
                         <a href="https://en.wikipedia.org/wiki/Dione_(moon)">https://en.wikipedia.org/wiki/Dione_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
