--- a/pages/earth.html
+++ b/pages/earth.html
@@ -212,7 +212,7 @@ link: earth
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/natural-satellites/moon.jpg" alt="Moon">
-                        <p class="caption">The Moon</p>
+                        <p class="caption">The Moon. <a href="https://en.wikipedia.org/wiki/File:FullMoon2010.jpg">Source</a></p>
                     </div>
                     <h2 class="paragraphheader" id="Moon">Moon</h2>
                     <p class="readmore">Main article: <a href="moon.html">Moon</a></p>
