--- a/pages/enceladus.html
+++ b/pages/enceladus.html
@@ -133,3 +133,6 @@ link: enceladus
                         <a href="https://en.wikipedia.org/wiki/Enceladus">https://en.wikipedia.org/wiki/Enceladus</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
