--- a/pages/europa.html
+++ b/pages/europa.html
@@ -153,3 +153,6 @@ link: europa
                         <a href="https://en.wikipedia.org/wiki/Europa_(moon)">https://en.wikipedia.org/wiki/Europa_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
