--- a/pages/exoplanet.html
+++ b/pages/exoplanet.html
@@ -8,16 +8,39 @@ link: exoplanet
                 <p class="paragraph">
                     Extrasolar planets, or exoplanets, are <a href="planet.html">planets</a> orbiting <a href="star.html">stars</a> different from the <a href="sun.html">Sun</a>. 
                     The first exoplanet was confirmed to exist in 1992. 
-                    There are more than 5,000 known exoplanets.
+                    There are more than 6,000 known exoplanets.
                 </p>
                 <p class="paragraph">
                     Many methods are used for detecting exoplanets, from direct imaging to transit and radial detections.
                 </p>
                 <p class="paragraph">
-                    The closest exoplanet, Proxima Centauri b, is located 4.2 light-years from <a href="earth.html">Earth</a> and orbits Proxima Centauri, the closest star to Earth.
-                    The planet is a potentially habitable, orbiting Proxima in it's habitable zone.
-                    Two other candidates may also orbit the star.
+                    The closest exoplanets, Proxima Centauri b and d, are located 4.2 light-years from <a href="earth.html">Earth</a> and orbit Proxima Centauri, the closest star to Earth.
+                    Proxima b is a potentially habitable, orbiting Proxima in it's habitable zone.
+                    One other candidate may also orbit the star.
                 </p>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/spacecrafts/kepler-space-telescope.png" alt="Kepler Space Telescope">
+                        <p class="caption">Kepler Space Telescope</p>
+                    </div>
+                    <h2 class="paragraphheader" id="Discovery">Discovery</h2>
+                    <p class="paragraph">
+                        In the 16th century, Giordano Bruno, an early supporter of heliocentrism, proposed that fixed stars have planets of their own just like the Sun.
+                        Issaac Newton also has mentioned this as a possibility in his book Principia. 
+                    </p>
+                    <p class="paragraph">
+                        In 1992, two planets were discovered around the pulsar PSR B1257+12.
+                        The two planets - Draugr and Poltergeist are the first known exoplanets.
+                        In 1995, another planet was discovered, this time around the star 51 Pegasi.
+                        The planet Pegasi 51b, later named Dimidium, is the first to orbit around another main-sequence star.
+                    </p>
+                    <p class="paragraph">
+                        In 2009, NASA launched the Kepler Space Telescope.
+                        It searched for nearby stars with possible planets using the transit method.
+                        It has yielded more than 2000 confirmed exoplanets.
+                        The successor to KST is TESS, which has over 7,000 candidates yet to be confirmed.
+                    </p>
+                </div>
                 <h2 class="paragraphheader" id="Naming">Naming</h2>
                 <p class="paragraph">
                     Exoplanet names are assigned based on the name of a star, with an additional letter at the end of the name. 
@@ -29,67 +52,94 @@ link: exoplanet
                 </p>
                 <p class="paragraph">
                     The IAU holds naming contests for planets and their hosts stars. 
-                    The closest planet to Earth with a proper name is Ægir, 10.5 light-years from Earth.
+                    The closest planet to Earth with a proper name is Ægir, around Epsilon Eridani, 10.5 light-years from Earth.
                 </p>
-                <h2 class="paragraphheader" id="DetectionMethods">Detection methods</h2>
-                <h3 class="paragraphsubheader" id="DirectImaging">Direct imaging</h3>
+                <h2 class="paragraphheader" id="ExoplanetCategorization">Exoplanet categorization</h2>
+                <h3 class="paragraphheader" id="BySize">By size</h3>
                 <p class="paragraph">
-                    Exoplanets are hard to detect directly, since they don't reflect as much light as the parent <a href="star.html">star</a> releases. 
-                    Every directly imaged exoplanet is more massive than <a href="jupiter.html">Jupiter</a> and far from the host star.
+                    Since there are way more planets outside the Solar System, they are much more diverse than eight known around the Sun.
+                    Apart from terrestrial, ice giants (<a href="neptune.html">Neptune</a>-like) and gas giants (<a href="jupiter.html">Jupiter</a>-like), there are also Super-Earths and Mini-Neptunes, which are 2 to 10 Earth masses and composed of similar material to their respective close analogue.
+                    There are also Super-Jupiters, which are the biggest known planets.
                 </p>
-                <h3 class="paragraphsubheader" id="PulsarTiming">Pulsar timing</h3>
+                <h3 class="paragraphheader" id="ByOrbit">By orbit</h3>
                 <p class="paragraph">
-                    Pulsars emit radio waves regularly. 
-                    Once a planet orbiting a pulsar transits, it will cause slight anomalies in timing. 
-                    The method is very precise and can detect planets smaller than <a href="earth.html">Earth</a>, but the rarity of pulsars and exoplanets orbiting them make this method highly unproductive.
-                </p>
-                <p class="paragraph">
-                    The first exoplanets ever are Draugr, Poltergeist and Phobetor, which orbit the pulsar PSR B1257+12.
-                </p>
-                <h3 class="paragraphsubheader" id="Astrometry">Astrometry</h3>
-                <p class="paragraph">
-                    Planets will influence the position of a star, due to gravity. 
-                    This leads to small changes in the position of a star. 
-                    With astrometry - the precise measurement of positions and movements of stars can detect planets. 
-                    It has also detected very few planets.
-                </p>
-                <h3 class="paragraphsubheader" id="Microlensing">Microlensing</h3>
-                <p class="paragraph">
-                    Gravitational fields of stars can magnify the light of distant background stars. 
-                    Planets can cause anomalies in the detection of microlensing. 
-                    This method is most sensitive to planets around 1-10 AU away from <a href="sun.html">Sun</a>-like stars.
-                </p>
-                <h3 class="paragraphsubheader" id="TransitDurationVariation">Transit duration variation</h3>
-                <p class="paragraph">
-                    The transit time of planets around multiple stars or planets with <a href="natural-satellite.html">moons</a> will vary. 
-                    No planet has been detected with this method, but circumbinary planets are successfuly confirmed with transit duration variation.
+                    Depending on their orbits, there are unique planets that break the Solar System model of terrestrial planets being closer to the Sun.
+                    Hot Jupiters and Neptunes are two classes of planets that resemble their Solar System analogs in size, but orbit close to their star, heating their surfaces.
+                    Depending on what they orbit, there are also circumbinary planets and circumtriple planets that orbit two and three stars respectively.
+                    Examples of such exoplanets are Kepler-16 b (circumbinary) and Gliese 900 b.
+                    Some planets orbit around stellar remnants (white dwarfs, neutron stars, pulsars, <a href="black-hole.html">black holes</a>) or brown dwarfs instead.
+                    Rogue planets are those that do not orbit any of these, instead they move through the interstellar medium.
+                    An example of a rogue planet is OGLE-2016-BLG-1928.
                 </p>
                 <p class="paragraph">
-                    One such planet is Kepler-16b, which orbits two stars - Kepler-16 A and Kepler-16 B.
+                    Important exoplanets are those that orbit within the habitable zone of their stars.
+                    If they are the size of Earth, then they are potentially habitable.
                 </p>
-                <h3 class="paragraphsubheader" id="TransitTimingVariation">Transit timing variation</h3>
-                <p class="paragraph">
-                    When multiple exoplanets are present, each one slightly perturbs the others' orbits. 
-                    Small variations in the times of transit for one planet can thus indicate the presence of another non-transiting planet.
-                </p>
-                <h3 class="paragraphsubheader" id="RadialVelocity">Radial velocity</h3>
-                <p class="paragraph">
-                    Stars orbit around the center of the system. 
-                    Due to the Doppler effect, variations in the star's radial velocity can be detected. 
-                    This method can detect planets orbiting low-mass stars. 
-                    It was the most productive method, until the transit method overtook it.
-                </p>
-                <h3 class="paragraphsubheader" id="Transit">Transit</h3>
-                <p class="paragraph">
-                    Planets transiting in front of stars can change the observed brightness of the host star. 
-                    This method detects planets with small orbits and has a high rate of false detections, but can determine more characteristics than other methods. 
-                    The Kepler telescope used this method.
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/other/exoplanet-transit.gif" alt="Transiting planet animation">
+                        <p class="caption">The brightness of stars dims periodically when a planet transits.</p>
+                    </div>
+                    <h2 class="paragraphheader" id="DetectionMethods">Detection methods</h2>
+                    <h3 class="paragraphsubheader" id="Transit">Transit</h3>
+                    <p class="paragraph">
+                        Planets transiting in front of stars can change the observed brightness of the host star. 
+                        This method detects planets with small orbits and has a high rate of false detections, but can determine more characteristics than other methods. 
+                        The Kepler telescope used this method.
+                    </p>
+                    <h3 class="paragraphsubheader" id="RadialVelocity">Radial velocity</h3>
+                    <p class="paragraph">
+                        Stars orbit around the center of the system. 
+                        Due to the Doppler effect, variations in the star's radial velocity can be detected. 
+                        This method can detect planets orbiting low-mass stars. 
+                        It was the most productive method, until the transit method overtook it.
+                    </p>
+                    <h3 class="paragraphsubheader" id="Microlensing">Microlensing</h3>
+                    <p class="paragraph">
+                        Gravitational fields of stars can magnify the light of distant background stars. 
+                        Planets can cause anomalies in the detection of microlensing. 
+                        This method is most sensitive to planets around 1-10 AU away from Sun-like stars.
+                    </p>
+                    <h3 class="paragraphsubheader" id="DirectImaging">Direct imaging</h3>
+                    <p class="paragraph">
+                        Exoplanets are hard to detect directly, since they don't reflect as much light as the parent star releases. 
+                        Every directly imaged exoplanet is more massive than Jupiter and far from the host star.
+                    </p>
+                    <h3 class="paragraphsubheader" id="PulsarTiming">Pulsar timing</h3>
+                    <p class="paragraph">
+                        Pulsars emit radio waves regularly. 
+                        Once a planet orbiting a pulsar transits, it will cause slight anomalies in timing. 
+                        The method is very precise and can detect planets smaller than Earth, but the rarity of pulsars and exoplanets orbiting them make this method highly unproductive.
+                    </p>
+                    <p class="paragraph">
+                        The first exoplanets ever are Draugr, Poltergeist, and Phobetor, which orbit the pulsar PSR B1257+12.
+                    </p>
+                    <h3 class="paragraphsubheader" id="Astrometry">Astrometry</h3>
+                    <p class="paragraph">
+                        Planets will influence the position of a star, due to gravity. 
+                        This leads to small changes in the position of a star. 
+                        With astrometry - the precise measurement of positions and movements of stars can detect planets. 
+                        It has also detected very few planets.
+                    </p>
+                    <h3 class="paragraphsubheader" id="TransitTimingVariation">Transit timing variation</h3>
+                    <p class="paragraph">
+                        When multiple exoplanets are present, each one slightly perturbs the others' orbits. 
+                        Small variations in the times of transit for one planet can thus indicate the presence of another non-transiting planet.
+                    </p>
+                    <h3 class="paragraphsubheader" id="TransitDurationVariation">Transit duration variation</h3>
+                    <p class="paragraph">
+                        The transit time of planets around multiple stars or planets with <a href="natural-satellite.html">moons</a> will vary. 
+                        No planet has been detected with this method, but circumbinary planets are successfuly confirmed with transit duration variation.
+                    </p>
+                    <p class="paragraph">
+                        One such planet is Kepler-16 b, which orbits two stars - Kepler-16 A and Kepler-16 B.
+                    </p>
+                </div>
                 <h2 class="paragraphheader" id="Habitability">Habitability</h2>
                 <p class="paragraph">
                     Exoplanets are yet to be studied for life. 
                     One metric for measuring habitability is the location of a planet. 
-                    If a planet is orbiting in the habitable zone of it's host <a href="star.html">star</a>, water could exist in all three states. 
+                    If a planet is orbiting in the habitable zone of it's host star, water could exist in all three states. 
                     Another metric is the size of a planet - planets with sizes similar to Earth are more likely to be similar in other aspects.
                 </p>
                 <h2 id="ExternalLinks">External links</h2>
