--- a/pages/galaxy.html
+++ b/pages/galaxy.html
@@ -16,7 +16,7 @@ link: galaxy
                         Galaxies come in a variety of shapes and sizes, ranging from complex spirals and simple ellipsoids to irregular clusters, formed by gravitational interactions with other galaxies.
                         The smallest galaxies, called dwarf galaxies, may contain only a few million stars, while the largest can have trillions.
                         Only a few percent of the mass is visible, with the remaining unexplained part allocated to dark matter without which galaxies would not have enough mass to form.
-                        Supermassive black holes are the common centerpiece of a galaxy.
+                        Supermassive <a href="black-hole.html">black holes</a> are the common centerpiece of a galaxy.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Formation">Formation</h2>
@@ -52,7 +52,7 @@ link: galaxy
                     Irregular Galaxies have no defined shape, instead being chaotic and asymmetrical.
                     Like the spiral galaxies they have high amounts of gas and dust and intense star formation.
                     However, their irregular shape is often the result of galactic collisions or interactions.
-                    Two examples of irregular galaxies are the Large and Small Magellanic Clouds.
+                    An examples of an irregular galaxies is the Small Magellanic Cloud.
                 </p>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
