--- a/pages/ganymede.html
+++ b/pages/ganymede.html
@@ -140,3 +140,6 @@ link: ganymede
                         <a href="https://en.wikipedia.org/wiki/Ganymede_(moon)">https://en.wikipedia.org/wiki/Ganymede_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
