--- a/pages/iapetus.html
+++ b/pages/iapetus.html
@@ -115,3 +115,6 @@ link: iapetus
                         <a href="https://en.wikipedia.org/wiki/Iapetus_(moon)">https://en.wikipedia.org/wiki/Iapetus_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
