--- a/pages/io.html
+++ b/pages/io.html
@@ -40,7 +40,7 @@ link: io
                 <p class="paragraph">
                     Io orbits Jupiter at an average distance of about 421,700 kilometers.
                     This close proximity to Jupiter subjects Io to immense tidal heating.
-                    Only four satellites are closer to Jupiter - Metis, Adrastea, Amalthea, and Thebe.
+                    Only four satellites are closer to Jupiter - Metis, Adrastea, <a href="amalthea.html">Amalthea</a>, and Thebe.
                     Io completes one orbit around Jupiter in approximately 1.77 Earth days.
                     This rapid orbital period is the shortest among the Galilean moons.
                     Just like every other round moon, Io is tidally locked.
@@ -147,3 +147,6 @@ link: io
                         <a href="https://web.archive.org/web/20250820212926/https://zimmer.csufresno.edu/~fringwal/w08a.jup.txt">http://zimmer.csufresno.edu/~fringwal/w08a.jup.txt</a> Archived 2025-08-20
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
