--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -97,7 +97,7 @@ link: jupiter
                 <p class="paragraph">
                     Jupiter has a faint planetary ring system composed of three main segments: an inner "halo", a relatively bright main ring and outer faint rings.
                     These rings appear to be made of dust, similar to the rings of <a href="neptune.html">Neptune</a>.
-                    The main ring is created by the satellites Metis and Adrastea, while the outer ones are shaped by Amalthea and Thebe.
+                    The main ring is created by the satellites Metis and Adrastea, while the outer ones are shaped by <a href="amalthea.html">Amalthea</a> and Thebe.
                 </p>
                 <h2 class="paragraphheader" id="Satellites">Satellites</h2>
                 <p class="readmore">Main article: <a href="satellites-of-jupiter.html">Satellites of Jupiter</a></p>
