--- a/pages/mars.html
+++ b/pages/mars.html
@@ -8,7 +8,7 @@ link: mars
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/planets/mars.jpg" alt="Mars">
-                        <p class="caption">Mars as seen by Rosetta</p>
+                        <p class="caption">Mars as seen by Rosetta. <a href="https://commons.wikimedia.org/wiki/File:OSIRIS_Mars_true_color.jpg">Source</a></p>
                     </div>
                     <p class="paragraph">
                         Mars is the fourth <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a> and the second smallest in the <a href="solar-system.html">Solar System</a>.   
@@ -53,7 +53,7 @@ link: mars
                 </p>
                 <h2 class="paragraphheader" id="NaturalHistory">Natural history</h2>
                 <p class="paragraph">
-                    Mars, like the other planets in our solar system, formed approximately 4.6 billion years ago from the solar nebula - a rotating disk of gas and dust surrounding the Sun.
+                    Mars, like the other planets in our solar system, formed approximately 4.6 billion years ago from the solar <a href="nebula.html">nebula</a> - a rotating disk of gas and dust surrounding the Sun.
                     As material in this disk collided and consolidated, Mars gradually accreted into a planet, developing its differentiated internal structure.
                     During its early history, known as the Noachian Period (about 4.1 to 3.7 billion years ago), Mars was a much warmer and wetter world, with a thicker atmosphere that allowed liquid water to flow across its surface, carving out river valleys, lake beds, and possibly even a vast ocean in the northern lowlands.
                     This era also saw intense volcanic activity, which shaped massive features like the Tharsis region.
@@ -74,7 +74,7 @@ link: mars
                 <p class="paragraph">
                     Mars has an interior similar to that of Earth. 
                     It is differentiated into a crust, a rocky mantle and a metallic core.
-                    The crust contains mostly silicates, with common elements being (apart from silicon and oxygen) iron, magnesium and aluminium.
+                    The crust contains mostly silicates, with common elements being (apart from silicon and oxygen) iron, magnesium and aluminum.
                     The iron(III) oxide (ferric oxide) gives Mars its red color.
                     The Martian mantle is solid and rocky, but is not divided like Earth's inner and outer mantle.
                     The core contains iron, nickel and sulfur.
