--- a/pages/mimas.html
+++ b/pages/mimas.html
@@ -89,3 +89,6 @@ link: mimas
                         <a href="https://en.wikipedia.org/wiki/Mimas">https://en.wikipedia.org/wiki/Mimas</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
