--- a/pages/miranda.html
+++ b/pages/miranda.html
@@ -108,3 +108,6 @@ link: miranda
                         <a href="https://en.wikipedia.org/wiki/Miranda_(moon)">https://en.wikipedia.org/wiki/Miranda_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
