--- a/pages/moon.html
+++ b/pages/moon.html
@@ -333,3 +333,6 @@ link: moon
                         <a href="https://en.wikipedia.org/wiki/Moon">https://en.wikipedia.org/wiki/Moon</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
