--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -28,7 +28,7 @@ link: natural-satellite
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/natural-satellites/moon.jpg" alt="The Moon">
-                        <p class="caption">The Moon</p>
+                        <p class="caption">The Moon. <a href="https://en.wikipedia.org/wiki/File:FullMoon2010.jpg">Source</a></p>
                     </div>
                     <h3 class="paragraphsubheader" id="TheMoon">The Moon</h3>
                     <p class="readmore">Main article: <a href="moon.html">Moon</a></p>
@@ -93,7 +93,7 @@ link: natural-satellite
                         93 other moons are known to orbit Jupiter. 
                         Just like the four Galilean moons, the rest are assigned names of lovers of Zeus (Greek equivalent of Jupiter) and their descendants. 
                         They are significantly smaller than the Galilean moons. 
-                        The biggest of them is Amalthea, and the most massive is Himalia.
+                        The biggest of them is <a href="amalthea.html">Amalthea</a>, and the most massive is Himalia.
                     </p>
                 </div>
                 <h3 class="paragraphsubheader" id="SatellitesOfSaturn">Satellites of Saturn</h3>
@@ -221,3 +221,6 @@ link: natural-satellite
                         <a href="https://en.wikipedia.org/wiki/Natural_satellite">https://en.wikipedia.org/wiki/Natural_satellite</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
