--- a/pages/oberon.html
+++ b/pages/oberon.html
@@ -83,3 +83,6 @@ link: oberon
                         <a href="https://en.wikipedia.org/wiki/Oberon_(moon)">https://en.wikipedia.org/wiki/Oberon_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
