--- a/pages/planet.html
+++ b/pages/planet.html
@@ -6,7 +6,7 @@ link: planet
 ---
 
                 <p class="paragraph">
-                    Planets are round astronomical bodies, smaller than <a href="star.html">stars</a>.
+                    Planets are round astronomical bodies that usually orbit around a <a href="star.html">star</a> and are smaller in size, but not another planet.
                     According to the IAU, a planet is a celestial body that:
                 </p>
                 <ol class="paragraph">
@@ -16,21 +16,21 @@ link: planet
                 </ol>
                 <p class="paragraph">
                     There are 8 planets in the <a href="solar-system.html">Solar System</a> - <a href="mercury.html">Mercury</a>, <a href="venus.html">Venus</a>, <a href="earth.html">Earth</a>, <a href="mars.html">Mars</a>, <a href="jupiter.html">Jupiter</a>, <a href="saturn.html">Saturn</a>, <a href="uranus.html">Uranus</a> and <a href="neptune.html">Neptune</a>. 
-                    The first four are known as terrestrial planets, Jupiter and Saturn are called gas giants and Uranus and Neptune are ice giants.
+                    The first four are known as terrestrial planets, Jupiter and Saturn are called gas giants, and Uranus and Neptune are ice giants.
                 </p>
                 <p class="paragraph">
                     Other objects used to be considered planets, but were later considered as completely different bodies. 
-                    For example, the Sun was considered a planet orbiting the Earth, but was later discovered that it is a star. 
+                    For example, the Sun was considered a planet orbiting the Earth, but was later discovered to be similar to the other stars. 
                     The <a href="natural-satellite.html">satellites</a> of planets like Earth's <a href="moon.html">Moon</a>, or the Jovian, Saturnian, Uranian and Neptunian moons were also considered planets for some time.
-                </p>
-                <p class="paragraph">
                     The same can be said for the <a href="asteroid.html">asteroids</a> in the <a href="asteroid-belt.html">Asteroid Belt</a>, or objects like <a href="pluto.html">Pluto</a>. 
                     The biggest asteroid - <a href="ceres.html">Ceres</a>, the <a href="tno.html">Trans-Neptunian objects</a> Pluto, <a href="eris.html">Eris</a>, <a href="haumea.html">Haumea</a>, <a href="makemake.html">Makemake</a> and many more are called <a href="dwarf-planet.html">dwarf planets</a>. 
                     The difference is that unlike regular planets, dwarf planets do not make up the majority of the mass in their orbit.
                 </p>
                 <p class="paragraph">
                     There are also many more known planets that exist outside our Solar System, known as <a href="exoplanet.html">exoplanets</a>. 
-                    Currently, there are more than 5 000 known exoplanets.
+                    Currently, there are more than 6 000 known exoplanets.
+                    The diversity of discovered planets make the IAU definition insufficient.
+                    For one, the boundary between stars and planets has to be defined, and whether a planet has to orbit a star.
                 </p>
                 <h2 class="paragraphheader" id="DiscoveryOfThePlanets">Discovery of the planets</h2>
                 <p class="paragraph">
@@ -52,6 +52,55 @@ link: planet
                     In 1930 this planet was believed to be the newly discovered Pluto. 
                     But after the discovery of many smaller objects beyond Neptune, Pluto's satellite <a href="charon.html">Charon</a> and a "tenth" planet Eris with it's moon <a href="dysnomia.html">Dysnomia</a> lead to the 2006 definition by the International Astronomical Union of what a planet is. 
                     According to it, Pluto, Eris and the other objects didn't meet the last criteria - to "clear the neighborhood", or in other words - to make up most of the mass within their orbits.
+                </p>
+                <p class="paragraph">
+                    In 1992, two planets were discovered around the pulsar PSR B1257+12.
+                    The two planets - Draugr and Poltergeist are the first known exoplanets.
+                    In 1995, another planet was discovered, this time around the star 51 Pegasi.
+                    The planet Pegasi 51b, later named Dimidium, is the first to orbit around another main-sequence star.
+                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/stars/hl-tauri.jpg" alt="HL Tauri protoplanetary disk">
+                        <p class="caption">A protoplanetary disk, imaged by ALMA. <a href="https://commons.wikimedia.org/wiki/File:HL_Tau_protoplanetary_disk.jpg">Source</a></p>
+                    </div>
+                    <h2 class="paragraphheader" id="Formation">Formation</h2>
+                    <p class="paragraph">
+                        Planets are born from clouds of gas and dust, known as protoplanetary disks, that spin around young stars.
+                        They arise from the collapse of a <a href="nebula.html">nebula</a> and the creation of a protostar.
+                        Tiny particles in the disk accrete into bigger pieces, eventually forming planetesimals.
+                        These kilometer-sized rocks collide to make bigger bodies, the biggest of which are massive enough to become round under their own weight.
+                        The larger the planet, the more gas it can hold as an atmosphere, and the largest become opaque gas giants, like Jupiter.
+                    </p>
+                </div>
+                <h2 class="paragraphheader" id="Categorization">Categorization</h2>
+                <h3 class="paragraphheader" id="InTheSolarSystem">In the Solar System</h3>
+                <p class="paragraph">
+                    In the Solar System, there are three defined categories of planets.
+                    The innermost four are terrestrial planets, that are generally smaller in size and consist of rocky material.
+                    If these planets were located further from the Sun, they would have been made up of more ice than rock, just like the dwarf planets beyond Neptune.
+                </p>
+                <p class="paragraph">
+                    The next largest planets are the ice giants, which are Uranus and Neptune.
+                    Ice, or volatiles, refers to gaseous substances heavier than hydrogen and helium like methane, nitrogen, ammonium and so on.
+                    Methane gives them their light blue color.
+                </p>
+                <p class="paragraph">
+                    The largest planets, Jupiter and Saturn, are the so-called gas giants.
+                    They are composed of mostly hydrogen and helium.
+                </p>
+                <h3 class="paragraphheader" id="ExoplanetCategories">Exoplanet categories</h3>
+                <p class="paragraph">
+                    Since there are way more planets outside the Solar System, they are much more diverse than eight known around the Sun.
+                    Apart from terrestrial, ice giants (Neptune-like) and gas giants (Jupiter-like), there are also Super-Earths and Mini-Neptunes, which are 2 to 10 Earth masses and composed of similar material to their respective close analogue.
+                    There are also Super-Jupiters, which are the biggest known planets.
+                </p>
+                <p class="paragraph">
+                    Depending on their orbits, there are unique planets that break the Solar System model of terrestrial planets being closer to the Sun.
+                    Hot Jupiters and Neptunes are two classes of planets that resemble their Solar System analogs in size, but orbit close to their star, heating their surfaces.
+                    Depending on what they orbit, there are also circumbinary planets and circumtriple planets that orbit two and three stars respectively.
+                    Some planets orbit around stellar remnants (white dwarfs, neutron stars, pulsars, black holes) or brown dwarfs instead.
+                    Rogue planets are those that do not orbit any of these, instead they move through the interstellar medium.
                 </p>
                 <h2 class="paragraphheader" id="PlanetsOfTheSolarSystem">Planets of the Solar System</h2>
                 <div class="articlediv">
@@ -99,7 +148,7 @@ link: planet
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/planets/mars.jpg" alt="Mars">
-                        <p class="caption">Mars</p>
+                        <p class="caption">Mars. <a href="https://commons.wikimedia.org/wiki/File:OSIRIS_Mars_true_color.jpg">Source</a></p>
                     </div>
                     <h3 class="paragraphsubheader" id="Mars">Mars</h3>
                     <p class="readmore">Main article: <a href="mars.html">Mars</a></p>
