--- a/pages/rhea.html
+++ b/pages/rhea.html
@@ -106,3 +106,6 @@ link: rhea
                         <a href="https://en.wikipedia.org/wiki/Rhea_(moon)">https://en.wikipedia.org/wiki/Rhea_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
