--- a/pages/satellites-of-jupiter.html
+++ b/pages/satellites-of-jupiter.html
@@ -24,7 +24,7 @@ link: satellites-of-jupiter
                     Around the same time, Simon Marius discovers the moons independently.
                 </p>
                 <p class="paragraph">
-                    The next discovery was that of Amalthea in 1892 by E. E. Barnard.
+                    The next discovery was that of <a href="amalthea.html">Amalthea</a> in 1892 by E. E. Barnard.
                     New moons were later discovered with the aid of photography - Himalia, Elara, Pasiphae, Sinope, Lysithea, Carme, Ananke and Leda.
                     Thanks to the Voyager spacecraft, further threee inner moons were found - Metis, Adrastea, and Thebe.
                     Many more moons were discovered with digital telescopes.
@@ -173,3 +173,6 @@ link: satellites-of-jupiter
                         <a href="https://science.nasa.gov/jupiter/moons/">https://science.nasa.gov/jupiter/moons</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
