--- a/pages/satellites-of-mars.html
+++ b/pages/satellites-of-mars.html
@@ -65,7 +65,7 @@ link: satellites-of-mars
                         Deimos is the second largest moon of Mars.
                         It is the smaller and the more distant from Mars of the two.
                         The surface has less unique features than Phobos and is marked by a few impact craters.
-                        Its smoother appearance is cause by partial filling of some of its craters
+                        Its smoother appearance is cause by partial filling of some of its craters.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
@@ -92,3 +92,6 @@ link: satellites-of-mars
                         <a href="https://science.nasa.gov/mars/moons/">https://science.nasa.gov/mars/moons</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
