--- a/pages/satellites-of-neptune.html
+++ b/pages/satellites-of-neptune.html
@@ -109,3 +109,6 @@ link: satellites-of-neptune
                         <a href="https://science.nasa.gov/neptune/moons/">https://science.nasa.gov/neptune/moons</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
