--- a/pages/satellites-of-saturn.html
+++ b/pages/satellites-of-saturn.html
@@ -161,7 +161,7 @@ link: satellites-of-saturn
                 <p class="paragraph">
                     The Gallic group is comprised of 17 satellites, which have prograde orbits similarly to the Inuit group.
                     Their semi-major axes range between 16 and 19 million km (except one), their inclinations between 36° and 41° (lower than the Inuit group), and their eccentricities between 0.46 and 0.53.
-                    Albironix is the largest in the group.
+                    Albiorix is the largest in the group.
                     Other named members are Bebhionn, Erriapus, and Tarvos.
                     S/2004 S 24 is an outlier, which has a semi-major axis of 23 million km, and an eccentricity of 0.07.
                 </p>
@@ -190,3 +190,6 @@ link: satellites-of-saturn
                         <a href="https://science.nasa.gov/saturn/moons/">https://science.nasa.gov/saturn/moons</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
