--- a/pages/satellites-of-uranus.html
+++ b/pages/satellites-of-uranus.html
@@ -52,7 +52,7 @@ link: satellites-of-uranus
                         Next is S/2025 U 1, which is a small moonlet.
                         After that are Bianca, Cressida, Desdemona, Juliet, Portia, and Rosalind, which make a group of their own.
                         Separated by a gap, the next three are Cupid, Belinda, and Perdita, which are the second subroup of inner moons.
-                        The last two are Puck, the biggest asteroid after the round moons, and Mab, which is a source of material for the μ ring.
+                        The last two are <a href="puck.html">Puck</a>, the biggest after the round moons, and Mab, which is a source of material for the μ ring.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -123,3 +123,6 @@ link: satellites-of-uranus
                         <a href="https://science.nasa.gov/uranus/moons/">https://science.nasa.gov/uranus/moons</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
