--- a/pages/titan.html
+++ b/pages/titan.html
@@ -163,3 +163,6 @@ link: titan
                         <a href="https://en.wikipedia.org/wiki/Titan_(moon)">https://en.wikipedia.org/wiki/Titan_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
