--- a/pages/titania.html
+++ b/pages/titania.html
@@ -97,3 +97,6 @@ link: titania
                         <a href="https://en.wikipedia.org/wiki/Titania_(moon)">https://en.wikipedia.org/wiki/Titania_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
