--- a/pages/triton.html
+++ b/pages/triton.html
@@ -140,3 +140,6 @@ link: triton
                         <a href="https://en.wikipedia.org/wiki/Triton_(moon)">https://en.wikipedia.org/wiki/Triton_(moon)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
