--- a/pages/umbriel.html
+++ b/pages/umbriel.html
@@ -95,3 +95,6 @@ link: umbriel
                         <a href="http://planets.oma.be/ISY/pdf/article_Icy.pdf">http://planets.oma.be/ISY/pdf/article_Icy.pdf</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catnatural-satellites.html %}
+                </div>
