--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -128,7 +128,7 @@ link: uranus
                     <p class="paragraph">
                         The other 24 moons are divided into inner and irregular.
                         The inner moons orbit within Miranda's orbit, the closest to Uranus of the five round moons.
-                        The biggest of them is Puck.
+                        The biggest of them is <a href="puck.html">Puck</a>.
                         All of the irregular moons orbit outside Oberon's orbit, the farthest round moon from Uranus.
                         They orbit in retrograde, with the exception of Margaret.
                         Sycorax is the largest moon of this group.
