--- a/pages/venus.html
+++ b/pages/venus.html
@@ -153,7 +153,7 @@ link: venus
                         The first to enter the atmosphere was Venera 4, which measured the surface temperature and atmosphere.
                         The results were different from earlier missions, measuring higher temperatures and denser atmosphere than previously thought.
                         The Venera program continued with the first soft land (Venera 7), the first photographs of the surface (Venera 9 and 10) and first color photographs (Venera 13 and 14), ending with Venera 15 and 16.
-                        VeGa 1 and 2 were soviet missions, which also studied the Halley comet during it's perihelion.
+                        VeGa 1 and 2 were soviet missions, which also studied <a href="halley.html">Halley's comet</a> during it's perihelion.
                         Other missions have visited the planet, with one still in progress (Akatsuki).
                         Future NASA missions VERITAS and DAVINCI+ are planned to visit the planet.
                     </p>
