--- a/pages/solar-system.html
+++ b/pages/solar-system.html
@@ -16,7 +16,7 @@ link: solar-system
                 </div>
                 <h2 class="paragraphheader" id="Formation">Formation</h2>
                 <p class="paragraph">
-                    The Solar System formed approximately 4.6 billion years ago from a giant, rotating cloud of gas and dust known as the solar nebula.
+                    The Solar System formed approximately 4.6 billion years ago from a giant, rotating cloud of gas and dust known as the solar <a href="nebula.html">nebula</a>.
                     According to the most widely accepted theory, this cloud began to collapse under its own gravity, possibly triggered by the shockwave from a nearby supernova.
                     As the nebula collapsed, it spun faster and flattened into a rotating disk called a protoplanetary disk.
                     At the center, gravity pulled more and more material together into a protostar that would become the Sun, which accounts for over 99% of the Solar System’s mass.
@@ -39,7 +39,7 @@ link: solar-system
                 <h3 class="paragraphheader" id="Sun">Sun</h3>
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun">
-                        <p class="caption">The Sun is the star of the Solar System</p>
+                        <p class="caption">The Sun is the star of the Solar System. <a href="https://commons.wikimedia.org/wiki/File:The_Sun_in_white_light.jpg">Source</a></p>
                     </div>
                     <p class="readmore">Main article: <a href="sun.html">Sun</a></p>
                     <p class="paragraph">
@@ -74,7 +74,7 @@ link: solar-system
                         <div class="captionbox center h180">
                             <img class="articleimage" src="../assets/images/planets/mars.jpg" alt="Mars">
                         </div>
-                        <p class="caption">Mercury, Venus, Earth, Mars</p>
+                        <p class="caption">Mercury, Venus, Earth, Mars (<a href="https://commons.wikimedia.org/wiki/File:OSIRIS_Mars_true_color.jpg">Source</a>. <a href="https://commons.wikimedia.org/wiki/File:OSIRIS_Mars_true_color.jpg">Source</a>)</p>
                     </div>
                     <p class="paragraph">
                         There are only three natural satellites orbiting these planets - the <a href="moon.html">Moon</a>, which orbits the Earth, and <a href="phobos.html">Phobos</a> and <a href="deimos.html">Deimos</a>, which orbit Mars.
@@ -168,7 +168,7 @@ link: solar-system
                         Comets are icy bodies that originate from the outer reaches of the Solar System and begin to release dust and gases when approaching their perihelion.
                         These vapors form a glowing coma and often a tail that can stretch millions of kilometers.
                         They are composed of ice, dust, and organic compounds.
-                        Famous "great comets" like Halley’s Comet and Comet Hale-Bopp have captivated human imagination for centuries, since they can be seen from Earth.
+                        Famous "great comets" like <a href="halley.html">Halley’s Comet</a> and Comet Hale-Bopp have captivated human imagination for centuries, since they can be seen from Earth.
                     </p>
                 </div>
                 <h2 id="ExternalLinks">External links</h2>
