--- a/pages/star.html
+++ b/pages/star.html
@@ -8,7 +8,7 @@ link: star
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun">
-                        <p class="caption">The Sun, a G-type star</p>
+                        <p class="caption">The Sun, a G-type star. <a href="https://commons.wikimedia.org/wiki/File:The_Sun_in_white_light.jpg">Source</a></p>
                     </div>
                     <p class="paragraph">
                         A star is a celestial body that is massive enough to sustain thermonuclear fusion.
@@ -17,8 +17,8 @@ link: star
                         There are an estimated 10^22 to 10^24 stars in the <a href="universe.html">universe</a>, but only around 4,000 can be seen with the naked eye.
                     </p>
                     <p class="paragraph">
-                        Stars are formed when a nebula collapses by it's own gravity. 
-                        During it's life it fuses hydrogen into helium and eventually dies, forming a white dwarf, a neutron star or a black hole, depending on a star's mass.
+                        Stars are formed when a <a href="nebula.html">nebula</a> collapses by it's own gravity. 
+                        During it's life it fuses hydrogen into helium and eventually dies, forming a white dwarf, a neutron star or a <a href="black-hole.html">black hole</a>, depending on a star's mass.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Observation">Observation</h2>
